# ContextOS

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  runtime-bundle.yml
config/: profile.example.toml  profile.example.windows.toml  projects.toml
contextos/cli/: __init__.py  call.py  init.py  main.py  suggest_stop_keywords.py
contextos/code_intel/: source_search.py
contextos/config_dim/: bind_resolver.py  confirm.py  corpus_scope.py  db_snapshot.py  extract.py  identify.py  owner_backfill.py  owner_overlay.py  pipeline.py  provider.py  schema.py  sensitive.py  tools.py  writeback.py
contextos/corpus/: __init__.py  connectors.py  docx_extract.py  leakage.py  materialize.py  record_store.py
contextos/db_provider/: dialects.py  gate_common.py  mysql_client.py  offline_ddl.py  oracle_gate.py  sqlcl_mcp.py  tns_parser.py
contextos/impact_map/: __init__.py  dimensions.py  enums.py  evidence.py  schema.py
contextos/init/: orchestrator.py  report.py
contextos/lineage/: __init__.py  build_database.py  dataflow.py  db_router.py  dblink_resolve.py  java_extract.py  models.py  mybatis_extract.py  mybatis_ingest.py  mysql_metadata.py  name_resolve.py  object_lineage.py  oracle_metadata.py  pipeline.py  provider.py  source_scan.py  sql_parse.py  sql_recover.py  store.py  tools.py  validate.py
contextos/llm/: __init__.py  base.py  factory.py  fake.py  openai_compat.py
contextos/mcp_server/: __init__.py  app_context.py  middleware.py  server.py
contextos/ops/: audit_sidecar.py  case_schema.py  case_store.py  dedupe.py  evidence_pointers.py  mechanism_tags.py  paths.py  pii_gate.py  recorder.py  synonyms.py
contextos/orchestrator/: __init__.py  artifact.py  assemble.py  change_type.py  corroboration.py  folding.py  pipeline.py  provider_io.py  rag_projection.py  registry.py
contextos/profile/: __init__.py  loader.py  schema.py  validator.py
contextos/prompts/: __init__.py  rerank.py  scope.py
scripts/: build-runtime-bundle.sh  check-indexer-licenses.sh  contextos-health-sessionstart.sh  smoke_breakdown.py  smoke_code_search.py  smoke_config_dim.py  smoke_lineage.py  smoke_llm.py  smoke_materialize.py  smoke_orchestrate.py  smoke_rag_provider.py  smoke_rerank.py
(+428 files in other folders)
